# models/user.js
@@ -1,19 +1,44 @@
-const mongoose = require('mongoose');
-const userSchema = new mongoose.Schema({
+const mongoose = require("mongoose");
+const userSchema = new mongoose.Schema(
+  {
     name: {
       type: String,
-      required: [true, '請輸入您的名字']
+      required: [true, "請輸入 name"],
     },
     email: {
       type: String,
-      required: [true, '請輸入您的 Email'],
+      required: [true, "請輸入 email"],
       unique: true,
       lowercase: true,
-      select: false
+      select: false,
     },
-    photo: String,
-  });
+    photo: { type: String, default: "" },
+    sex: {
+      type: String,
+      default: "male",
+      enum: ["male", "female"],
+    },
+    password: {
+      type: String,
+      required: [true, "請輸入 password"],
+      minlength: 8,
+      select: false,
+    },
+    createdAt: {
+      type: Date,
+      default: Date.now,
+      select: false,
+    },
+    role: {
+      type: String,
+      enum: ["admin", "user"],
+    },
+  },
+  {
+    versionKey: false,
+  }
+);
 
-const User = mongoose.model('user', userSchema);
+const User = mongoose.model("user", userSchema);
 
 module.exports = User;
