# swagger-output.json
@@ -14,12 +14,52 @@
   "paths": {
     "/users/": {
       "get": {
+        "tags": [
+          "Users - 用戶"
+        ],
         "description": "",
         "parameters": [],
         "responses": {}
       }
     },
-    "/posts/": {
+    "/users/signup": {
+      "post": {
+        "tags": [
+          "Users - 用戶"
+        ],
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/users/login": {
+      "post": {
+        "tags": [
+          "Users - 用戶"
+        ],
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/users/profile": {
+      "get": {
+        "tags": [
+          "Users - 用戶"
+        ],
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/users/updatePassword": {
+      "patch": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/posts": {
       "get": {
         "tags": [
           "Posts - 貼文"
@@ -94,12 +134,80 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "Posts - 貼文"
+        ],
+        "description": "取得所有貼文",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "貼文資訊",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "_id": {
+                        "type": "string",
+                        "example": "6293b29dc213ea2a2264511e"
+                      },
+                      "user": {
+                        "type": "object",
+                        "properties": {
+                          "_id": {
+                            "type": "string",
+                            "example": "6284bd0df623a5fcf56630f0"
+                          },
+                          "name": {
+                            "type": "string",
+                            "example": "John"
+                          },
+                          "photo": {
+                            "type": "string",
+                            "example": "https://thumb.fakeface.rest/thumb_male_10_8c02e4e9bdc0e103530691acfca605f18caf1766.jpg"
+                          }
+                        }
+                      },
+                      "image": {
+                        "type": "string",
+                        "example": ""
+                      },
+                      "content": {
+                        "type": "string",
+                        "example": "123"
+                      },
+                      "likes": {
+                        "type": "number",
+                        "example": 0
+                      },
+                      "comments": {
+                        "type": "number",
+                        "example": 0
+                      },
+                      "createdAt": {
+                        "type": "string",
+                        "example": "2022-05-29T17:51:25.670Z"
+                      }
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        }
       }
     },
-    "/post/": {
+    "/post": {
       "post": {
         "tags": [
           "Posts - 貼文"
